--- a/mbed_app.json
+++ b/mbed_app.json
@@ -4,7 +4,11 @@
         "default_toolchain": "ARM",
         "extra_labels": ["STM", "STM32F4", "STM32F412RG"],
         "supported_toolchains": ["ARM", "uARM", "GCC_ARM", "IAR"],
-        "stdio_uart_tx": "PA _11",
-        "stdio_uart_rx": "PA_12"
+    "target_overide": {
+        "*": {
+            "target.stdio_uart_tx": "PA_11",
+            "target.stdio_uart_rx": "PA_12"
+            }
+         }
      }
  }
